Added userContent route
